# fastapi-mongodb

./: main.py  pyproject.toml
models/: inventory.py
routes/: inventory.py  users.py
utils/: database.py
