[tool.poetry]
name = "fastapi-mongodb"
version = "0.1.0"
description = ""
authors = ["Luis E Moreno <lemiliomoreno@gmail.com>"]
readme = "README.md"
packages = [{include = "fastapi_mongodb"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.99.1"
uvicorn = {extras = ["standard"], version = "^0.22.0"}
motor = "^3.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
